--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 .container{
     display: grid;
     place-items: center;
-    height: 70vh;
+    height: 400px;
     margin-top: 100px;
 }
 .diya{
